[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/text_editor/TE_TextEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/text_editor/TE_FilesList.gd" type="Script" id=3]
[ext_resource path="res://addons/text_editor/TE_FileEditor.gd" type="Script" id=4]
[ext_resource path="res://addons/text_editor/TE_SymbolsList.gd" type="Script" id=5]
[ext_resource path="res://addons/text_editor/TE_FileTabs.gd" type="Script" id=6]
[ext_resource path="res://addons/text_editor/TE_TagsPanel.gd" type="Script" id=7]
[ext_resource path="res://addons/text_editor/TE_LineEdit.gd" type="Script" id=8]
[ext_resource path="res://addons/text_editor/TE_MetaInfo.gd" type="Script" id=9]
[ext_resource path="res://addons/text_editor/fonts/font_i.tres" type="DynamicFont" id=10]
[ext_resource path="res://addons/text_editor/fonts/font_b.tres" type="DynamicFont" id=11]
[ext_resource path="res://addons/text_editor/fonts/font_r.tres" type="DynamicFont" id=12]
[ext_resource path="res://addons/text_editor/fonts/font_bi.tres" type="DynamicFont" id=13]
[ext_resource path="res://addons/text_editor/fonts/font.tres" type="DynamicFont" id=14]

[sub_resource type="Theme" id=1]
TooltipLabel/fonts/font = ExtResource( 12 )

[sub_resource type="Theme" id=2]
TooltipLabel/fonts/font = ExtResource( 12 )

[node name="text_editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file_editor" type="TextEdit" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 222.0
margin_top = 74.0
margin_right = 214.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 14 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true
minimap_draw = true
script = ExtResource( 4 )

[node name="c" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="PanelContainer" parent="c"]
margin_right = 1024.0
margin_bottom = 34.0

[node name="c" type="HBoxContainer" parent="c/c"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0

[node name="test" type="Button" parent="c/c/c"]
margin_right = 12.0
margin_bottom = 20.0
text = "âŸ³"

[node name="file_button" type="MenuButton" parent="c/c/c"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 20.0
text = "file"
items = [ "New File", null, 0, false, false, 0, 0, null, "", false, "Extensions", null, 0, false, false, 1, 0, null, "Extensions", false, "New File", null, 0, false, false, 2, 0, null, "", false, "Extensions", null, 0, false, false, 3, 0, null, "Extensions", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="view_button" type="MenuButton" parent="c/c/c"]
margin_left = 52.0
margin_right = 93.0
margin_bottom = 20.0
focus_mode = 2
text = "view"
items = [ "New File", null, 0, false, false, 0, 0, null, "", false, "Extensions", null, 0, false, false, 1, 0, null, "Extensions", false, "New File", null, 0, false, false, 2, 0, null, "", false, "Extensions", null, 0, false, false, 3, 0, null, "Extensions", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="div1" type="HSplitContainer" parent="c"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
split_offset = -300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c2" type="PanelContainer" parent="c/div1"]
margin_right = 206.0
margin_bottom = 566.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="c" type="Panel" parent="c/div1/c2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 199.0
margin_bottom = 559.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="list_files" type="RichTextLabel" parent="c/div1/c2/c"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
custom_fonts/bold_italics_font = ExtResource( 13 )
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
bbcode_text = "[url=add_file:0][color=#ff00ff00]+[/color][/url]
[color=#ff4d4d4d][url=d:0][color=#ff333333][/color]ðŸ—€â–¼[b]test_files[/b][/url][/color]
[url=f:0][color=#ff333333][/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]questish[/color][/i].[color=#ff666666]yaml[/color][/url]
[url=f:1][color=#ff333333][/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]garoyle[/color][/i].[color=#ff666666]md[/color][/url]
[url=f:2][color=#ff333333][/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]json[/color][/i].[color=#ff666666]json[/color][/url]
[url=f:3][color=#ff333333][/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]config[/color][/i].[color=#ff666666]ini[/color][/url]
[url=f:4][color=#ff333333][/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]acc[/color][/i].[color=#ff666666]csv[/color][/url]
[color=#ff4d4d4d][url=d:1][color=#ff333333]â”ƒ [/color]ðŸ—€â–¼[b]afolder[/b][/url][/color]
[url=f:5][color=#ff333333]â”ƒ [/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]new_file[/color][/i].[color=#ff666666]yaml[/color][/url]
[url=f:6][color=#ff333333]â”ƒ [/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]ass2[/color][/i].[color=#ff666666]yaml[/color][/url]
[url=f:7][color=#ff333333]â”ƒ [/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]todo[/color][/i].[color=#ff666666]md[/color][/url]
[url=f:8][color=#ff333333]â”ƒ [/color][color=#ff333333]â”£â•¸[/color][i][color=#ff404040]my_fileok[/color][/i].[color=#ff666666]md[/color][/url]
[color=#ff4d4d4d][url=d:2][color=#ff333333]â”ƒ â”ƒ [/color]ðŸ—€â–¼[b]New Folder[/b][/url][/color]
[url=f:9][color=#ff333333]â”ƒ â”ƒ [/color][color=#ff333333]â”—â•¸[/color][i][color=#ff404040]mor[/color][/i].[color=#ff666666]md[/color][/url]"
meta_underlined = false
text = "+
ðŸ—€â–¼test_files
â”£â•¸questish.yaml
â”£â•¸garoyle.md
â”£â•¸json.json
â”£â•¸config.ini
â”£â•¸acc.csv
â”ƒ ðŸ—€â–¼afolder
â”ƒ â”£â•¸new_file.yaml
â”ƒ â”£â•¸ass2.yaml
â”ƒ â”£â•¸todo.md
â”ƒ â”£â•¸my_fileok.md
â”ƒ â”ƒ ðŸ—€â–¼New Folder
â”ƒ â”ƒ â”—â•¸mor.md"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file_popup" type="PopupMenu" parent="c/div1/c2/c/list_files"]
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 14 )
items = [ "Rename", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Remove", null, 0, false, false, 2, 0, null, "", false ]

[node name="dir_popup" type="PopupMenu" parent="c/div1/c2/c/list_files"]
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 14 )
items = [ "New File", null, 0, false, false, 0, 0, null, "", false, "New Folder", null, 0, false, false, 1, 0, null, "", false ]

[node name="div2" type="HSplitContainer" parent="c/div1"]
margin_left = 218.0
margin_right = 1024.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="VBoxContainer" parent="c/div1/div2"]
margin_right = 614.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="line_edit" type="LineEdit" parent="c/div1/div2/c"]
visible = false
margin_right = 614.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 12 )
script = ExtResource( 8 )

[node name="tab_container" type="TabContainer" parent="c/div1/div2/c"]
margin_right = 614.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 12 )
tab_align = 0
drag_to_rearrange_enabled = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="meta" type="RichTextLabel" parent="c/div1/div2/c"]
margin_top = 543.0
margin_right = 614.0
margin_bottom = 566.0
custom_fonts/bold_italics_font = ExtResource( 13 )
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
fit_content_height = true
script = ExtResource( 9 )

[node name="c2" type="PanelContainer" parent="c/div1/div2"]
margin_left = 626.0
margin_right = 806.0
margin_bottom = 566.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="c" type="VSplitContainer" parent="c/div1/div2/c2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 559.0
custom_constants/autohide = 0

[node name="c" type="Panel" parent="c/div1/div2/c2/c"]
margin_right = 166.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="list_symbols" type="RichTextLabel" parent="c/div1/div2/c2/c/c"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_fonts/bold_italics_font = ExtResource( 13 )
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
bbcode_text = "[color=#ff808080][i][center]*No symbols*"
meta_underlined = false
text = "*No symbols*"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c2" type="Panel" parent="c/div1/div2/c2/c"]
margin_top = 282.0
margin_right = 166.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="list_tags" type="RichTextLabel" parent="c/div1/div2/c2/c/c2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 13 )
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
bbcode_text = "[color=#ff808080][i][center]*No tags*"
meta_underlined = false
text = "*No tags*"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0

[node name="popup_unsaved" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
window_title = "Warning"
dialog_text = "Unsaved data will be lost."

[node name="file_dialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.5
margin_top = -157.0
margin_right = 297.5
margin_bottom = 157.0
current_dir = "res://test_files"
current_path = "res://test_files/"
__meta__ = {
"_edit_use_anchors_": false
}
